# personal-todo

./: .gitignore  README.md  index.html  package-lock.json  package.json  vitest.config.ts
backups/src_20260506_083620/: app.ts  types.ts
backups/src_20260506_083620/app/: TodoApp.test.ts
backups/src_20260506_083620/components/: ConfirmModal.test.ts  ContextMenu.ts  QuickInput.test.ts  SearchBar.test.ts  TodoForm.test.ts
backups/src_20260506_083620/services/: parser.ts
coverage/: coverage-final.json  index.html
coverage/components/: CategoryManager.ts.html  CategoryPanel.ts.html  ConfirmModal.ts.html  ContextMenu.ts.html  FilterBar.ts.html  QuickInput.ts.html  SearchBar.ts.html  TodoForm.ts.html  TodoItem.ts.html  index.html
coverage/services/: i18n.ts.html  index.html  parser.ts.html  storage.ts.html
coverage/setup/: index.html  mocks.ts.html
docs/: README.md  README_en.md
src/: app.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CategoryManager.test.ts  CategoryManager.ts  CategoryPanel.test.ts  CategoryPanel.ts  ConfirmModal.ts  ContextMenu.test.ts  FilterBar.test.ts  FilterBar.ts  FlowCanvas.ts  QuickInput.ts  SearchBar.ts  TodoForm.ts  TodoItem.test.ts  TodoItem.ts
src/services/: dailyReset.ts  i18n.test.ts  i18n.ts  parser.test.ts  reminder.ts  storage.test.ts  storage.ts
src/setup/: mocks.ts
src/styles/: main.css
